<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvUid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="UID:"/>
    <Button
        android:id="@+id/btnDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Test Database"/>
    <Button
        android:id="@+id/btnStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Test Storage"/>
    <Button
        android:id="@+id/btnUpDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Up/Down Storage"/>
    <Button
        android:id="@+id/btnUserList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User List"/>
    <Button
        android:id="@+id/btnAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Alarm"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</LinearLayout>
